--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,35 @@
 @import './reset.css';
 @import './header.css';
+@import './basket.css';
+
+@font-face {
+  font-family: 'Segoe UI';
+  src: url('../fonts/Segoe\ UI.ttf');
+}
+
+@font-face {
+  font-family: 'Segoe UI Bold';
+  src: url('../fonts/Segoe\ UI\ Bold.ttf');
+}
+
+@font-face {
+  font-family: 'Segoe UI Italic';
+  src: url('../fonts/Segoe\ UI\ Italic.ttf');
+}
+
+@font-face {
+  font-family: 'Segoe UI Bold Italic';
+  src: url('../fonts/Segoe\ UI\ Bold\ Italic.ttf');
+}
 
 body {
   background-color: var(--color-violet);
+  font-family: 'Segoue UI';
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  padding: 0px 16px;
+}
+
