--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,11 +1,28 @@
 :root {
   /* fonts */
-  --font-bold-26-24: 600 21px/25px 'Segoe UI Bold', sans-serif;
-  --font-bold-20-28: 700 20px/28px 'Segoe UI Bold', sans-serif;
-  --font-regular-16-24: 400 16px/24px 'Segoe UI Bold', sans-serif;
-  
-  
+  --font-bold-19-24: 600 19px/24px "Segoe UI Bold", sans-serif;
+  --font-bold-20-28: 700 20px/28px "Segoe UI Bold", sans-serif;
+  --font-bold-16-24: 700 16px/24px "Segoe UI Bold", sans-serif;
+  --font-semibold-16-24: 600 16px/24px "Segoe UI", sans-serif;
+  --font-semibold-10-18: 400 10px/18px "Segoe UI", sans-serif;
+  --font-regular-16-24: 400 16px/24px "Segoe UI", sans-serif;
+  --font-regular-13-16: 400 13px/16px "Segoe UI", sans-serif;
+  --font-regular-14-20: 400 14px/20px "Segoe UI", sans-serif;
+  --font-regular-12-14: 400 12px/14px "Segoe UI", sans-serif;
+  --font-regular-20-24: 400 20px/24px "Segoe UI", sans-serif;
+
   /* colors */
   --color-violet: rgba(103, 37, 168, 1);
   --color-white: rgba(255, 255, 255, 1);
+  --color-rulers: rgba(0, 0, 0, 0.1);
+  --color-rulers-input: rgba(0, 0, 0, 0.2);
+  --color-accent: rgba(203, 17, 171, 1);
+  --color-smoky: rgba(246, 246, 250, 1);
+  --color-black: rgba(0, 0, 0, 1);
+  --color-gray: rgba(151, 151, 175, 1);
+  --color-red: rgba(255, 59, 48, 1);
+  --color-orange: rgba(245, 81, 35, 1);
+  --color-green: rgba(12, 180, 119, 1);
+  --color-system-gray: rgba(160, 160, 164, 1);
+  --color-smoky-dark: rgba(240, 236, 244, 1);
 }
