--- a/styles/footer.css
+++ b/styles/footer.css
@@ -6,3 +6,13 @@
   padding: 24px;
   text-align: center;
 }
+
+.footer {
+  margin-bottom: 56px;
+}
+
+@media screen and (min-width: 1024px) {
+  .footer {
+    margin-bottom: 0px;
+  }
+}
