--- a/styles/index.css
+++ b/styles/index.css
@@ -43,6 +43,7 @@ body {
 .container {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   background-color: var(--color-smoky);
   border-radius: 24px;
   padding: 15px 0px 24px;
@@ -51,5 +52,6 @@ body {
 @media screen and (min-width: 1024px) {
   .container {
     flex-direction: row;
+    padding: 22px 25px 50px 24px;
   }
 }
