--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,6 +2,8 @@
   /* fonts */
   --font-bold-19-24: 600 19px/24px "Segoe UI Bold", sans-serif;
   --font-bold-20-28: 700 20px/28px "Segoe UI Bold", sans-serif;
+  --font-bold-28-36: 700 28px/36px "Segoe UI Bold", sans-serif;
+  --font-bold-24-32: 700 24px/32px "Segoe UI Bold", sans-serif;
   --font-bold-16-24: 700 16px/24px "Segoe UI Bold", sans-serif;
   --font-semibold-16-24: 600 16px/24px "Segoe UI", sans-serif;
   --font-semibold-10-18: 400 10px/18px "Segoe UI", sans-serif;
@@ -10,6 +12,7 @@
   --font-regular-14-20: 400 14px/20px "Segoe UI", sans-serif;
   --font-regular-12-14: 400 12px/14px "Segoe UI", sans-serif;
   --font-regular-20-24: 400 20px/24px "Segoe UI", sans-serif;
+  --font-regular-18-24: 400 18px/24px "Segoe UI", sans-serif;
 
   /* colors */
   --color-violet: rgba(103, 37, 168, 1);
