--- a/styles/variables.css
+++ b/styles/variables.css
@@ -5,6 +5,7 @@
   --font-bold-28-36: 700 28px/36px "Segoe UI Bold", sans-serif;
   --font-bold-24-32: 700 24px/32px "Segoe UI Bold", sans-serif;
   --font-bold-16-24: 700 16px/24px "Segoe UI Bold", sans-serif;
+  --font-bold-13-16: 700 13px/16px "Segoe UI Bold", sans-serif;
   --font-semibold-16-24: 600 16px/24px "Segoe UI", sans-serif;
   --font-semibold-10-18: 400 10px/18px "Segoe UI", sans-serif;
   --font-regular-16-24: 400 16px/24px "Segoe UI", sans-serif;
