--- a/styles/charge.css
+++ b/styles/charge.css
@@ -40,10 +40,15 @@
   padding: 8px 8px 12px 8px;
   border-radius: 8px;
   margin-bottom: 16px;
+  position: relative;
 }
 
 .charge_correctBtn {
   cursor: pointer;
+}
+
+.charge_correctBtn:hover path {
+  fill: var(--color-orange);
 }
 
 .charge_tooltipCaption {
@@ -130,6 +135,22 @@
   border-bottom: 1px solid var(--color-rulers);
   font: var(--font-regular-13-16);
   color: currentColor;
+}
+
+.charge_deliveryTooltip {
+  position: absolute;
+  background-color: var(--color-white);
+  border-radius: 8px;
+  height: 56px;
+  width: 288px;
+  padding: 10px 16px 14px 16px;
+  font: var(--font-regular-13-16);
+  box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.30), 0px 2px 10px 0px rgba(0, 0, 0, 0.15);
+  top: 48px;
+  left: -16px;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.2s;
 }
 
 @media screen and (min-width: 1024px) {
